# hollow

./: .env.linux  .env.macos  .env.production  .gitignore  .prettierrc  README.md  TODO.md  index.html  package-lock.json  package.json  selector.html  stats.html  tsconfig.json  tsconfig.node.json  vite.aliases.ts  vite.config.ts
.github/workflows/: build-macos.yml  build-windows-aarch64.yml  build-windows-x86_64.yml  build-windows.yml  main.yml
concepts/: ASCEND.md  TODO.md
scripts/: split_emojis.cjs
src/: Hollow.tsx  HollowContext.tsx  UI.tsx  hollow.ts  index.tsx  svg.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  auth.rs  cards.rs  deeplink.rs  lib.rs  main.rs  plugins.rs  realm.rs  utils.rs  vault.rs
src-tauri/wix/: license.rtf
src/App/: hollow.ts  index.tsx
src/Hollow/: hollow.ts  realm.tsx  rust.ts
src/Selector/: Selector.tsx  SelectorWindow.tsx  index.tsx
src/app/: App.tsx  Container.tsx  Selector.tsx
src/components/: AlertTrigger.tsx  Button.tsx  Card.tsx  CardConfig.tsx  Checkbox.tsx  ColorPick.tsx  ColorPicker.tsx  Combobox.tsx  Confirm.tsx  ConfirmPop.tsx  DropDown.tsx  Dropdown.tsx  DynamicOption.tsx  EmojiPick.tsx  EmojiPicker.tsx  EntriesViewer.tsx  EntryViewer.tsx  FetchedIcon.tsx  FilterButton.tsx  FormPop.tsx  FormTrigger.tsx  Icon.tsx  ImportButton.tsx  ImportFile.tsx  Input.tsx  KanbanItem.tsx  Kbd.tsx  Loading.tsx  MarkdownEditor.tsx  MyIcon.tsx  NumberInput.tsx  Pagination.tsx  Slider.tsx  SortableVerticalList.tsx  Switch.tsx  Tag.tsx  TagEditor.tsx  TextFormater.tsx  Tool.tsx  ToolIcon.tsx  (+6 more)
src/hooks/: setStyle.ts  useBackground.ts  useCodeTheme.ts  useColor.ts  useDropdownPosition.ts  useGrid.ts  useTags.ts
src/lib/: app.ts
src/managers/: CardFileManager.ts  CharacterManager.ts  CodeThemeManager.ts  DeepLinkManager.ts  EntryManager.ts  EventsManager.ts  HollowManager.ts  HotkeysManager.ts  MarkdownManager.ts  NotifyManager.ts  ReactiveManager.ts  RealmManager.ts  RustManager.ts  SettingsManager.ts  Storage.ts  ToolDataBase.ts  ToolManager.ts  VaultManager.ts  index.ts  init.ts  initalStack.ts
src/styles/: calendar.css  checkbox.css  globals.css  index.css  loader.css  markdown-preview.css  tooltip.css  ui.css
src/type/: CardInfo.d.ts  Character.d.ts  ConfirmType.d.ts  ContextMenuItem.d.ts  EditorKitType.d.ts  EntryData.d.ts  FormType.d.ts  GridInfo.d.ts  HandType.d.ts  HotKeyType.d.ts  (+15 more)
(+423 files in other folders)
